# cookiecutter-django

./: cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_build.sh  test_docker.sh
{{cookiecutter.project_slug}}/: .gitignore  .gitlab-ci.yml  Makefile  local.yml  pyproject.toml  pytest.ini  setup.cfg
{{cookiecutter.project_slug}}/.envs/.production/: .django
{{cookiecutter.project_slug}}/compose/local/django/: Dockerfile  start
{{cookiecutter.project_slug}}/compose/production/django/: Dockerfile
{{cookiecutter.project_slug}}/config/: urls.py  wsgi.py
{{cookiecutter.project_slug}}/config/settings/: base.py  local.py  production.py  test.py
{{cookiecutter.project_slug}}/requirements/: base.txt  local.txt
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/templates/: base.html
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/managements/commands/: testuser.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/services/: user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/users/tests/: factories.py  test_user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: swagger.py
